--- a/mtams/mtams-war/web/applicationCreate.xhtml
+++ b/mtams/mtams-war/web/applicationCreate.xhtml
@@ -130,7 +130,7 @@
                                 </h:panelGrid>
                                 <p:commandButton icon="ui-icon-plus"  action="#{appBean.reinit}" update="itinPanel" />
                                 <p:watermark for="tempDest" value="Click to Select"/>
-                                <p:dialog header="Header Text" widgetVar="dlgCountry">
+                                <p:dialog header="City Selector" widgetVar="dlgCountry">
 
                                     <div id="DTdivtest" class="divCurrency" >
                                         <!--
