--- a/mtams/mtams-war/web/help.xhtml
+++ b/mtams/mtams-war/web/help.xhtml
@@ -62,7 +62,7 @@
                                   </p:fieldset>
                               
                               <p:growl id="r" showDetail="true" />
-                                <p:fieldset legend="applications" toggleable="true" toggleSpeed="500" collapsed="true">  
+                                <p:fieldset legend="Applications" toggleable="true" toggleSpeed="500" collapsed="true">  
                                 <b><u>
                                <h:outputText value = "Applications"/>
                                             </u></b> 
@@ -110,7 +110,7 @@
                                 </p:fieldset>
                               
                               <p:growl id="o" showDetail="true" />
-                                <p:fieldset legend="Conference Atendance Form" toggleable="true" toggleSpeed="500" collapsed="true"> 
+                                <p:fieldset legend="Conference Attendance Form" toggleable="true" toggleSpeed="500" collapsed="true"> 
                                             <b><u>
                                        <h:outputText value =  "Conference Attendance Form"/>
                                                 </u></b>
