--- a/mtams/mtams-war/web/customStages.xhtml
+++ b/mtams/mtams-war/web/customStages.xhtml
@@ -11,51 +11,52 @@
         <ui:composition template="./template/template.xhtml">
 
             <ui:define name="content">
-                <h:form id="leaveHome">                   
+                <h:form id="custom">                   
 
-                            <p:fieldset legend="Current Stages">  
-                                <p:dataTable id="Availablestages" var="stage" value="#{adminBean.stages}">  
-                                    <p:column style="width:20px">  
-                                        <h:outputText id="dragIcon" styleClass="ui-icon ui-icon-arrow-4" />  
-                                        <p:draggable for="dragIcon" revert="true" />  
-                                    </p:column>  
+                    <p:fieldset legend="Current Stages">  
+                        <p:dataTable id="Availablestages" var="stage" value="#{adminBean.stages}" >  
+                            <p:column style="width:20px">  
+                                <h:outputText id="dragIcon" styleClass="ui-icon ui-icon-arrow-4" />  
+                                <p:draggable for="dragIcon" revert="true"  /> 
 
-                                    <p:column headerText="ID">  
-                                        <h:outputText value="#{stage.idstage}" />  
-                                    </p:column>  
+                            </p:column>  
 
-                                    <p:column headerText="Stages">  
-                                        <h:outputText value="#{stage.stage}" />  
-                                    </p:column>  
+                            <p:column headerText="ID">  
+                                <h:outputText value="#{stage.idstage}" />  
+                            </p:column>  
 
-                                </p:dataTable>  
-                            </p:fieldset>  
+                            <p:column headerText="Stages">  
+                                <h:outputText value="#{stage.stage}" />  
+                            </p:column>  
 
-                            <p:fieldset id="NewStage" legend="New Selected Stages" style="margin-top:20px">  
-                                <p:outputPanel id="dropArea">  
-                                    <h:outputText value="Drop Stages Here" 
-                                                  rendered="#{empty adminBean.dropStages}"  
-                                                  style="font-size:24px;" />  
+                        </p:dataTable>  
+                    </p:fieldset>  
 
-                                    <p:dataTable var="stage" value="#{adminBean.dropStages}"   
-                                                 rendered="#{not empty adminBean.dropStages}">  
+                    <p:fieldset id="NewStage" legend="New Selected Stages" style="margin-top:20px">  
+                        <p:outputPanel id="dropArea">  
+                            <h:outputText value="Drop Stages Here" 
+                                          rendered="#{empty adminBean.dropStages}"  
+                                          style="font-size:24px;" />  
 
-                                        <p:column headerText="ID">  
-                                            <h:outputText value="#{stage.idstage}" />  
-                                        </p:column>  
+                            <p:dataTable var="stage" value="#{adminBean.dropStages}"   
+                                         rendered="#{not empty adminBean.dropStages}">  
 
-                                        <p:column headerText="Stages">  
-                                            <h:outputText value="#{stage.stage}" />  
-                                        </p:column>    
+                                <p:column headerText="ID">  
+                                    <h:outputText value="#{stage.idstage}" />  
+                                </p:column>  
 
-                                    </p:dataTable>  
-                                </p:outputPanel>  
-                            </p:fieldset> 
+                                <p:column headerText="Stages">  
+                                    <h:outputText value="#{stage.stage}" />  
+                                </p:column>    
 
-                            <p:droppable for="NewStage" tolerance="touch" activeStyleClass="ui-state-highlight" 
-                                         datasource="Availablestages" onDrop="handleDrop">  
-                                <p:ajax listener="#{adminBean.onStageDrop}" update="dropArea Availablestages" />  
-                            </p:droppable>
+                            </p:dataTable>  
+
+                        </p:outputPanel>  
+                    </p:fieldset> 
+                    <p:droppable for="NewStage" tolerance="touch" datasource="Availablestages" onDrop="handleDrop">  
+                        <p:ajax listener="#{adminBean.onStageDrop}" update=":custom:dropArea :custom:Availablestages" />  
+                    </p:droppable>
+
                 </h:form>
             </ui:define>
 
