modified motivation and final costing

--- a/branches/megamerge/mtams/mtams-war/web/applicationApproval.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/applicationApproval.xhtml
@@ -96,7 +96,7 @@
                         </fieldset>
 
                         <br />
-                        <h3>Please select the approved quote</h3>
+                        <h3 style="color: fuchsia">Please select the approved quote</h3>
                         <fieldset>
                             <legend><h4>Flight Quotes</h4></legend>
                             <p:dataTable var="fQ" value="#{approvalBean.flights}" selectionMode="single" selection="#{approvalBean.selectedFlgQte}" rowKey="#{fQ.idflightquotes}" >
