--- a/mtams/mtams-war/web/help.xhtml
+++ b/mtams/mtams-war/web/help.xhtml
@@ -16,7 +16,7 @@
                         <p:panel header="Help">  
                             
                             <br />
-                            <h:outputText value =  "Please clik on the Area of the system which you require help for."/>
+                            <h:outputText value =  "Please click on the Area of the system which you require help for."/>
                             <br />
                             <br />
                             <p:growl id="growl" showDetail="true" />
