--- a/mtams/mtams-war/web/applicationApproval.xhtml
+++ b/mtams/mtams-war/web/applicationApproval.xhtml
@@ -190,6 +190,14 @@
                                     <p:ajax update="isApproved" event="blur" />
                                 </p:selectOneRadio>
                                 <p:message for="isApproved"/>
+                                
+                                <h:outputText value="Generate PDF?"/>
+                                <p:selectOneRadio id="createPDF" value="#{approvalBean.isPDF}" required="true">
+                                    <f:selectItem itemLabel="Yes" itemValue="1"/>
+                                    <f:selectItem itemLabel="No" itemValue="2"/>
+                                    <p:ajax update="createPDF" event="blur"/>
+                                </p:selectOneRadio>
+                                <p:message for="createPDF"/>
 
                                 <h:outputText value="Authorizer Name:" />
                                 <p:inputText id="authName" value="#{approvalBean.approvalName}" required="true" requiredMessage="Name of authorizer is missing" >
